--- a/roles/pinpoint-server/tasks/config_hbase.yml
+++ b/roles/pinpoint-server/tasks/config_hbase.yml
@@ -20,4 +20,4 @@
     group: root
 
 - name: start hbase
-  service: name=hbase state=started enabled=yes
+  service: name=hbase state=started #enabled=yes
