--- a/setup-efk.yml
+++ b/setup-efk.yml
@@ -5,14 +5,14 @@
   roles:
     - { role: elasticsearch, es_instance_name: "node1" }
 
-- name: install the kibana
-  become: yes
-  hosts: efk
-  roles:
-    - kibana
+#- name: install the kibana
+#  become: yes
+#  hosts: efk
+#  roles:
+#    - kibana
 
-- name: install the td-agent(fluentd agent)
-  become: yes
-  hosts: efk
-  roles:
-    - td-agent
+#- name: install the td-agent(fluentd agent)
+#  become: yes
+#  hosts: efk
+#  roles:
+#    - td-agent
